--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@
 body {
     position: relative;
     width: 100%;
-    background-image: url(./assets/bgc.jpg);
+    background-image: url(./assets/bg.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
